--- a/package.json
+++ b/package.json
@@ -83,7 +83,6 @@
         "c9.ide.ace.stripws": "#cf0f42ac59",
         "c9.ide.behaviors": "#5ae88f87e1",
         "c9.ide.closeconfirmation": "#cee4674141",
-        "c9.ide.configuration": "#a9066299a2",
         "c9.ide.dialog.wizard": "#7667ec79a8",
         "c9.ide.fontawesome": "#781602c5d8",
         "c9.ide.format": "#5ec97fb083",
@@ -121,6 +120,7 @@
     },
     "devUser":"bmatusiak-c9",
     "devPlugins":{
-        "c9.ide.popup": "#f813d07b56"
+        "c9.ide.popup": "#f813d07b56",
+        "c9.ide.configuration":"#a1b3917ac8"
     }
 }
